# whatsapp-agent

./: .env.example  .gitignore  Dockerfile  README.md  compose.yaml  pyproject.toml
app/: __init__.py  agent.py  config.py  db.py  intelligence.py  knowledge.py  main.py  models.py  niches.py  security.py
app/static/: index.html
niches/: clinica.json  general.json  imobiliaria.json
tests/: test_api.py
